# rag-resume-tailor-service

./: LICENSE  app.py  file_utils.py  job_scraper.py  llm_utils.py  pyproject.toml  requirements.txt  resume_processor.py
tests/: test_utils.py
